@@ -1,5 +1,7 @@
 package br.com.iveso.dasa.dao;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class DAOFactory {
 
 	private static DAOFactory instance;
@@ -14,11 +16,11 @@ public class DAOFactory {
 	
 	public <T extends DAO<?>> T getDAO(Class<T> clazz) throws DAOException {
 		try {
-			return clazz.newInstance();
-		} catch (InstantiationException e) {
-			throw new DAOException(e);
-		} catch (IllegalAccessException e) {
+			return clazz.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+				| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new DAOException(e);
 		}
+			
 	}
 }
